<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SleepGuru</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for settings fragment-->
    <string name="settings_activity">Settings</string>
    <string name="benchmark_label">Benchmark</string>
    <string name="highscore_label">Highscore</string>
    <string name="username_summary">Enter your username here</string>
    <string name="username">Username</string>
    <string name="password_summary">Enter your password here</string>
    <string name="password">Password</string>
    <string name="sleep_time_summary">How long time do you sleep at night? (hours)</string>
    <string name="sleep_time">Sleep time</string>
    <string name="score_summary">Your benchmark score</string>
    <string name="score">Score</string>

    <!-- Strings for test activity-->
    <string name="test_activity">Test</string>

    <!-- Strings for result activity-->
    <string name="result_activity">Result</string>

    <!-- Strings for statistic -->
    <string name="statistic_activity">Statistic</string>


    <string-array name="menu">
        <item>Clock</item>
        <item>Graph</item>
        <item>Return</item>
    </string-array>

</resources>